FIX : Bug 29609 - The TT icon overlaps with the "select font" link when wgBetterDirectionality is enabled.
git-svn-id: http://svn.wikimedia.org/svnroot/mediawiki/trunk@90972 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/css/webfonts.css
+++ b/css/webfonts.css
@@ -1,14 +1,19 @@
+li#pt-webfont{
+	background: url(images/font-icon.png) no-repeat scroll left top transparent;
+   	padding-left: 15px !important;
+}
+
 div#webfonts-menu{
 	margin: 0;
 	padding:0;
 	font-size: 100%;
+	z-index: 99999
 }
 
 div#webfonts-fonts{
 	margin: 0;
 	padding:5px;
 	font-size: 100%;
-	z-index: 99999;
 }
 
 
@@ -34,16 +39,19 @@ div.webfontMenu {
 div.webfontMenuFocus {
 	background-position: -22px 60%;
 }
+
 /* @noflip */
-body.rtl div.webfontMenu {
+body.rtl div.webfontMenu ul li {
 	direction: rtl;
 }
+
 div.webfontMenu div.menu {
 	position: relative;
 	display: none;
 	clear: both;
 	text-align: left;
 }
+
 /* OVERRIDDEN BY COMPLIANT BROWSERS */
 /* @noflip */
 body.rtl div.webfontMenu div.menu {
@@ -115,9 +123,6 @@ div.webfontMenu li.selected a:visited {
 }
 div.webfontMenu a {
 	display: block;
-	padding-left:20px;
-	background-image: url(images/font-icon.png);
-	background-position: 0px 60%;
-	background-repeat: no-repeat;
-
+	padding-left:5px;
+	padding-right:5px;
 }
